--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "homepage": "https://fedenu1993.github.io/prueba1",
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
